# dollar-lambda

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  LICENSE  Makefile  README.md  README.py  build  dev.md  do.py  do_option.py  flake.nix  fuzz_test.py  justfile  main.py  parser.py  pyproject.toml  readme.ipynb  readme.md  readme.py  readme.rst  stateless_iterator.py  test.py  test.sh  todo.md  tutorial.py
docs/: args.html  decorators.html  error.html  index.html  index.js  key_value.html  parse.html  parser.html  requirements.txt  result.html  sequence.html
docs/dollar_lambda/: args.html  decorators.html  error.html  index.html  key_value.html  parser.html  result.html  sequence.html
docs/source/: api.rst  command_tree.rst  conf.py  config.rst  docs.rst  ignoring.rst  index.rst  nesting.rst  tutorial.rst  variations.rst  why.rst
dollar_lambda/: __init__.py  args.py  data_structures.py  decorator.py  decorators.py  error.py  errors.py  key_value.py  parse.py  parser.py  parsers.py  result.py  sequence.py
html/monad_argparse/: index.html  io.html  lst.html  monad.html  nonempty_list.html  option.html  parser.html  result.html  stateless_iterator.html
monad_argparse/: __init__.py  apply.py  args.py  argument.py  argument_parsers.py  do.py  done.py  error.py  flag.py  io.py  item.py  key_value.py  lst.py  monad.py  nonempty_list.py  nonpositional.py  option.py  parse.py  parser.py  result.py  sat.py  sequence.py  stateless_iterator.py  todo.md  type_.py
monad_argparse/monad/: io.py  lst.py  monad.py  monad_plus.py  monoid.py  nonempty_list.py  option.py  result.py  stateless_iterator.py
monad_argparse/parser/: apply.py  argument.py  do_parser.py  done.py  empty.py  error.py  flag.py  item.py  key_value.py  nonpositional.py  option.py  parse.py  parser.py  result.py  sat.py  sequence.py  type_.py
source/: docs.rst
template/: config.mako  frame.html.jinja2  head.mako  html.mako  index.html.jinja2  logo.mako  search.mako  text.mako
