[tool.poetry]
name = "dollar-lambda"
version = "1.1.3"
description = "An argument parser for Python built from functional first principles"
readme = "README.md"
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
maintainers = ["Ethan Brooks <ethanabrooks@gmail.com>"]
include = ["dollar_lambda/py.typed"]
homepage = "https://dollar-lambda.readthedocs.io"
repository = "https://github.com/ethanabrooks/dollar-lambda"
keywords = ["argument-parser", "parser", "parser-combinators", "functional-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pytypeclass = "^0.1.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pre-commit = "^2.17.0"
jupyter = "^1.0.0"
jupytext = "^1.13.7"
jupyter-http-over-ws = "^0.0.8"
pyre-check = "^0.9.10"
ipython = "^8.2.0"
mypy = "^0.942"
pyright = "^1.1.234"
Sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
black = "^22.3.0"
sphinxext-opengraph = "^0.6.3"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
sphinx-tabs = "^3.3.1"
sphinx-thebe = "^0.1.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['readme\.py']
